ui: Fix the visibility of links in .alert-info boxes with underlining
To make links visible in .alert-info boxes (where blue link text does
not stand out from other blue text), we invert the underlining (text
decoration) of links: Instead of underlining a link on hover or focus,
we underline them by default inside these alert boxes and remove the
underlining on hover and focus.

This way, we don't have to use a semantically incorrect yellow box.

--- a/static/cdedb.css
+++ b/static/cdedb.css
@@ -65,6 +65,12 @@ body{
 .input-group-addon label {
     margin-bottom: 0;
 }
+.alert-info a {
+    text-decoration: underline;
+}
+.alert-info a:hover, .alert-info a:focus {
+    text-decoration: none;
+}
 .table-slim {
     width: auto;
 }
